// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameField renders cells for passed empty GameField 1`] = `
<div
  className="css-jc15lu"
>
  <div>
    <div
      className="css-1as9ajb"
      onClick={[Function]}
    />
    <div
      className="css-1as9ajb"
      onClick={[Function]}
    />
  </div>
  <div>
    <div
      className="css-1as9ajb"
      onClick={[Function]}
    />
    <div
      className="css-1as9ajb"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`GameField renders filled cells snapshot check 1`] = `
<div
  className="css-jc15lu"
>
  <div>
    <div
      className="css-1v6gphh"
      onClick={[Function]}
    />
    <div
      className="css-1as9ajb"
      onClick={[Function]}
    />
  </div>
  <div>
    <div
      className="css-1as9ajb"
      onClick={[Function]}
    />
    <div
      className="css-1as9ajb"
      onClick={[Function]}
    />
  </div>
</div>
`;
